bk_ida/gccida/g3/reg_set_between_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1309:4: error: expected ';' after expression
rtx insn; // [rsp+20h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1309:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+20h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1318:4: error: expected ';' after expression
rtx y; // [rsp+58h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1318:5: error: use of undeclared identifier 'y'
rtx y; // [rsp+58h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1340:29: error: expected ')'
if ( find_reg_fusage( ( rtx)rtwint, CLOBBER, reg) ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1340:21: note: to match this '('
if ( find_reg_fusage( ( rtx)rtwint, CLOBBER, reg) ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1343:1: error: use of undeclared identifier 'y'
y = reg; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1355:1: error: use of undeclared identifier 'y'
y = reg; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1372:1: error: use of undeclared identifier 'insn'
insn = ( rtx)rtwint; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1404:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v16.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1427:27: error: expected expression
&& ( rtx_equal_p( *( rtx *)( v30 + 8), y) || *( _WORD *)v31 != 66 && reg_overlap_mentioned_p( y, v31)) ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1427:40: error: use of undeclared identifier 'y'
&& ( rtx_equal_p( *( rtx *)( v30 + 8), y) || *( _WORD *)v31 != 66 && reg_overlap_mentioned_p( y, v31)) ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1427:95: error: use of undeclared identifier 'y'
&& ( rtx_equal_p( *( rtx *)( v30 + 8), y) || *( _WORD *)v31 != 66 && reg_overlap_mentioned_p( y, v31)) ) 
                                                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1440:24: error: use of undeclared identifier 'y'
if ( rtx_equal_p( rtx, y) || *( _WORD *)rtx != 66 && reg_overlap_mentioned_p( y, rtx) ) 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1440:79: error: use of undeclared identifier 'y'
if ( rtx_equal_p( rtx, y) || *( _WORD *)rtx != 66 && reg_overlap_mentioned_p( y, rtx) ) 
                                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1450:31: error: use of undeclared identifier 'insn'
rtwint = ( unsigned __int16 *)insn; 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1500:27: error: expected expression
&& ( rtx_equal_p( *( rtx *)( v43 + 8), y) || *( _WORD *)v44 != 66 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1500:40: error: use of undeclared identifier 'y'
&& ( rtx_equal_p( *( rtx *)( v43 + 8), y) || *( _WORD *)v44 != 66 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1501:29: error: use of undeclared identifier 'y'
&& reg_overlap_mentioned_p( y, v44)) ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/rtlanal.c:1515:24: error: use of undeclared identifier 'y'
if ( rtx_equal_p( v25, y) || *( _WORD *)v25 != 66 && reg_overlap_mentioned_p( y, v25) ) 
                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_between_p/src/obj/rtlanal.o] Error 1
